--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -11,16 +11,17 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+
+<script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
+
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
 		{% if not user.is_authenticated %}
     	<h1 class="well">Login</h1>
-    	{% else %}
-    	<h1 class="well">Bienvenido {{ user }}</h1>
-    	<a href="/salir/">LogOut</a>
-    	{% endif %}
-		<div class="col-lg-12 well">
+    	<div class="col-lg-12 well">
 				<div class="row">	
 					<div class="col-sm-4">
 						<div class="btn-group">
@@ -39,6 +40,49 @@
 					</div>
 				</div>	
 		</div>
+    	{% else %}
+    	<h1 class="well">Bienvenido {{ user }}</h1>
+    	<a href="/salir/">LogOut</a>
+    	<div id='map' style='width: 100%; height: 350px;'></div>
+		<div id='menu'>
+			<input id='streets-v11' type='radio' name='rtoggle' value='streets' checked='checked'>
+			<label for='streets'>streets</label>
+			<input id='light-v10' type='radio' name='rtoggle' value='light'>
+			<label for='light'>light</label>
+			<input id='dark-v10' type='radio' name='rtoggle' value='dark'>
+			<label for='dark'>dark</label>
+			<input id='outdoors-v11' type='radio' name='rtoggle' value='outdoors'>
+			<label for='outdoors'>outdoors</label>
+			<input id='satellite-v9' type='radio' name='rtoggle' value='satellite'>
+			<label for='satellite'>satellite</label>
+		</div>
+		<script>
+			mapboxgl.accessToken = 'pk.eyJ1IjoiY2FtaWxvZ216IiwiYSI6ImNrMjExcG52cjA2eHAzaG81MWRiZ2Rua24ifQ.EmlyVuv0L8wQ1gdqspxm1Q';
+			var map = new mapboxgl.Map({
+			container: 'map',
+			style: 'mapbox://styles/mapbox/streets-v11'
+			});
+			// Add zoom and rotation controls to the map.
+			map.addControl(new mapboxgl.NavigationControl());
+
+			var layerList = document.getElementById('menu');
+			var inputs = layerList.getElementsByTagName('input');
+			 
+			function switchLayer(layer) {
+			var layerId = layer.target.id;
+			map.setStyle('mapbox://styles/mapbox/' + layerId);
+			}
+			 
+			for (var i = 0; i < inputs.length; i++) {
+			inputs[i].onclick = switchLayer;
+			}
+			var marker = new mapboxgl.Marker()
+			  .setLngLat([30.5, 50.5])
+			  .addTo(map);
+		</script>
+    	{% endif %}
+		
 	</div>
+
 </body>
 </html>
