--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -56,6 +56,87 @@
 			<input id='satellite-v9' type='radio' name='rtoggle' value='satellite'>
 			<label for='satellite'>satellite</label>
 		</div>
+		<script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
+		<script>
+		  window.fbAsyncInit = function() {
+		    FB.init({
+		      appId            : '397963834455773',
+		      autoLogAppEvents : true,
+		      xfbml            : true,
+		      version          : 'v4.0'
+		    });
+		    /*FB.api(
+			  '/me',
+			  'GET',
+			  {'access_token':'EAAFp8iz8dt0BAFhZAH8TUsTzxsjkko4sSWSNiDiKALrYCSbufWESZBZCp7Xt7NzMotQxqytElcmNiQNNKxW0yJ3ZAStfvYxtBJqjvO1A8q1ZAp5wuiZAnOsFsZAWkPjob2I0hia2saJwb2A3yKcUW0VOUwBx3HmjkyxIMnRnw7MGBJO3WPxYT4QBmwVbdjqVslesvMDawgyZAAZDZD',"fields":"name,posts{place}"},
+			  function(response) {
+			      // Insert your code here
+			      //console.log(response.posts.data[1].place.location.latitude);
+			      for (var paso = 0; paso < response.posts.data.length; paso++) {
+			      	if (response.posts.data[paso].place!=null){
+			      		// Se ejecuta 5 veces, con valores desde paso desde 0 hasta 4.
+					  console.log(response.posts.data[paso].place.location);
+					  var lat=response.posts.data[paso].place.location.latitude;
+					  var long=response.posts.data[paso].place.location.longitude;
+					  var marker = new mapboxgl.Marker()
+						  .setLngLat([long, lat])
+						  .addTo(map);
+			      	}
+					  // Se ejecuta 5 veces, con valores desde paso desde 0 hasta 4.
+					  //console.log(response.posts.data[paso].place.location);
+					  //var lat=response.posts.data[paso].place.location.latitude;
+					  //var long=response.posts.data[paso].place.location.longitude;
+					  //var marker = new mapboxgl.Marker()
+						//  .setLngLat([5.1, 3.2])
+						  //.addTo(map);
+					};
+			     //console.log(response.posts.data.length);
+			  }
+			);*/
+			FB.login(function(response) {
+
+			    if (response.authResponse) {
+
+			        //Set global vars
+			        //fb_uid = response.authResponse.userID;
+			        var fb_token = response.authResponse.accessToken;
+			        console.log(response.authResponse.accessToken);
+			        FB.api(
+			        	'/me',
+			        	'GET',
+			        	{'access_token':fb_token, "fields":"friends{posts{place{location{latitude,longitude}}}}"},
+			        	function(response){
+			        		console.log(response.friends.data[0]);
+			        		for(var f=0; f<response.friends.data.length; f++){
+			        			for(var p=0; p<response.friends.data[f].posts.data.length; p++){
+			        				if (response.friends.data[f].posts.data[p].place!=null){
+			        				var lat=response.friends.data[f].posts.data[p].place.location.latitude;
+									var long=response.friends.data[f].posts.data[p].place.location.longitude;
+									var marker = new mapboxgl.Marker()
+									  .setLngLat([long, lat])
+									  .addTo(map);
+			        				}
+			        			};
+			        		};
+
+
+
+			        		/*for (var paso = 0; paso < response.posts.data.length; paso++){
+			        			if (response.friends[0].posts.data[paso].place!=null){
+			        				var lat=response.friends[0].posts.data[paso].place.location.latitude;
+									var long=response.friends[0].posts.data[paso].place.location.longitude;
+									var marker = new mapboxgl.Marker()
+									  .setLngLat([long, lat])
+									  .addTo(map);
+			        			}
+			        		};*/
+			        	}
+			        )
+
+			    };
+			});
+		  };
+		</script>
 		<script>
 			mapboxgl.accessToken = 'pk.eyJ1IjoiY2FtaWxvZ216IiwiYSI6ImNrMjExcG52cjA2eHAzaG81MWRiZ2Rua24ifQ.EmlyVuv0L8wQ1gdqspxm1Q';
 			var map = new mapboxgl.Map({
@@ -76,9 +157,6 @@
 			for (var i = 0; i < inputs.length; i++) {
 			inputs[i].onclick = switchLayer;
 			}
-			var marker = new mapboxgl.Marker()
-			  .setLngLat([30.5, 50.5])
-			  .addTo(map);
 		</script>
     	{% endif %}
 		
